--- a/mastishk/src/app/forgot-password/forgot-password.page.html
+++ b/mastishk/src/app/forgot-password/forgot-password.page.html
@@ -1,9 +1,29 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
-    <ion-title>forgot-password</ion-title>
+    <ion-title>Forgot Your Password?</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
-<ion-content>
-
+<ion-content class="ion-padding content-bg">
+  <ion-grid class="loginWrap">
+    <form class="fullW">
+      <div class="logo">
+        <img src="../../assets/logo.svg" />
+      </div>
+      <ion-text color="color-secondary" class="headingStyle1">
+        <h2>Forgot Your Password?</h2>
+      </ion-text>
+      <ion-text color="color-secondary-lite" class="subTitle">
+        <small>Confirm your email as we’ll send the URL</small>
+      </ion-text>
+      <div class="formWrap">
+        <ion-input class="inputField userIcon" placeholder="Enter email address" type="number"></ion-input>
+      </div>
+      
+      <div class="formWrap">
+        <ion-button class="button-round btncolorprimary" expand="full" >Send</ion-button>
+      </div>
+    </form>
+  </ion-grid>
 </ion-content>
+
