--- a/mastishk/src/app/login/login.page.html
+++ b/mastishk/src/app/login/login.page.html
@@ -3,62 +3,70 @@
     <ion-title>login</ion-title>
   </ion-toolbar> -->
 </ion-header>
-
-<ion-content padding>
-  
+<ion-content class="ion-padding content-bg">
   <ion-grid class="loginWrap">
-    <form class="formWrap">
-  <ion-row margin-bottom>
-    <img src=""> 
-  </ion-row>
-  
-
-  <ion-item>
-    <ion-label position="floating">Username*</ion-label>
-    <ion-input type="number"></ion-input>
-  </ion-item>
-
-  <ion-item>
-    <ion-label position="floating">Password*</ion-label>
-    <ion-input type="password"></ion-input>
-  </ion-item>
-
-  <ion-row>
-    <ion-col>
-      <ion-button  class="btnFull" color="success">Sign In</ion-button>
-    </ion-col>
-  </ion-row>
-
-  <ion-row>
-    <ion-col>
-      <ion-button  class="btnFull" color="success">Create Account</ion-button>
-    </ion-col>
-  </ion-row>
-
-  <ion-row>
-    <ion-col>
-      <ion-text class="forgotPasswordText">
-        <a>Forgot Password?</a>
+    <form class="fullW" [formGroup]="loginForm" (ngSubmit)="doLogin()">
+      <div class="logo">
+        <img src="../../assets/logo.svg" />
+      </div>
+      <ion-text color="color-secondary" class="headingStyle1">
+        <h2>Sign In</h2>
       </ion-text>
-    </ion-col>
-  </ion-row>
+      <div class="formWrap">
+        <!-- <ion-label>Username*</ion-label> -->
+        <ion-input class="inputField userIcon" formControlName="username" placeholder="Enter Mobile Number" min="10" max="10" type="number" required></ion-input>
+        <span class="error-message ion-padding" *ngIf="isSubmitted && errorControl.username.errors?.required">
+          Username is required.
+        </span>
+        <span class="error-message ion-padding" *ngIf="isSubmitted && errorControl.username.errors?.pattern">
+          Please provide valid username.
+        </span>
+        <span class="error-message ion-padding" *ngIf="isSubmitted && (loginForm.controls['username'].hasError('minLength'))">
+          Username must contain 10 digits
+        </span>
+      </div>
 
-  <ion-row>
-    <ion-col>
-      <ion-text color="light" class="or">
-        OR Sign In With
-      </ion-text>
-    </ion-col>
-  </ion-row> 
+      <div class="formWrap">
+        <!-- <ion-label>Password*</ion-label> -->
+        <ion-input type="password" class="inputField passwordIcon" formControlName="password" placeholder="Enter password" required></ion-input>
+        <span class="error-message ion-padding" *ngIf="isSubmitted && errorControl.password.errors?.required">
+          Password is required.
+        </span>
+        <span class="error-message ion-padding" *ngIf="isSubmitted && errorControl.password.errors?.pattern">
+          Please provide valid password.
+        </span>
+      </div>
+      <div class="formWrap">
+        <ion-button type="submit" class="button-round btncolorprimary" expand="full" >Sign In</ion-button>
+      </div>
+      <div class="formWrap">
+      <ion-button class="button-round btnPrimaryOutline blueColor" expand="full" fill="outline" (click)="goToSignup()">Create Account</ion-button>
+    </div>
+    <ion-row>
+      <ion-col class="formWrap forgotPassword">
+        <a class="" (click)="goToForgotPassword()">Forgot Password?</a>        
+      </ion-col>
+    </ion-row>
 
-  <ion-row>
-    <ion-col>
-      <button class="btnSocial btnFacebook"><ion-icon name="logo-facebook"></ion-icon>Facebook</button>
-    </ion-col>
-    <ion-col>
-      <button class="btnSocial btnGoogle"><ion-icon name="logo-google"></ion-icon>Google</button>
-    </ion-col>
-  </ion-row>
-</form>
-</ion-grid>
+     <ion-row>
+        <ion-col>
+          <ion-text class="or" expand="block"> OR Sign In With </ion-text>
+        </ion-col>
+      </ion-row>
+
+      <ion-row>        
+        <ion-col>
+          <ion-button class="button-round btncolorprimary btnSocial btnGoogle" expand="block">
+            <img src="../../assets/google.svg" /> Google
+          </ion-button>
+        </ion-col>
+        <ion-col>
+          
+          <ion-button class="button-round btncolorprimary btnSocial btnFacebook" expand="block">
+            <img src="../../assets/facebook.svg" /> Facebook
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </form>
+  </ion-grid>
 </ion-content>
