--- a/mastishk/src/app/user-profile/user-profile.page.html
+++ b/mastishk/src/app/user-profile/user-profile.page.html
@@ -5,5 +5,16 @@
 </ion-header>
 
 <ion-content>
+  <IonCard>
+    <IonItem>
+      <IonIcon icon={pin} slot="start" />
+      <IonLabel>ion-item in a card, icon left, button right</IonLabel>
+      <IonButton fill="outline" slot="end">View</IonButton>
+    </IonItem>
 
+    <IonCardContent>
+      This is content, without any paragraph or header tags,
+      within an ion-cardContent element.
+</IonCardContent>
+  </IonCard>
 </ion-content>
