--- a/mastishk/src/theme/variables.scss
+++ b/mastishk/src/theme/variables.scss
@@ -88,6 +88,10 @@
  --ion-bg-color:  #f2f2f2;
  --color-secondary: #1a1a1a;
  --color-secondary-lite: #808080;
+ --color-red:  #eb4132;
+ --color-blue: #080854;
+ --color-green: #367c10;
+ --color-orange: #e28500;
 }
 
 @media (prefers-color-scheme: dark) {
