Done with the integration for login , reset password and registration

--- a/mastishk/src/app/forgot-password/forgot-password.page.html
+++ b/mastishk/src/app/forgot-password/forgot-password.page.html
@@ -6,7 +6,7 @@
 
 <ion-content class="ion-padding content-bg">
   <ion-grid class="loginWrap">
-    <form class="fullW">
+    <form class="fullW" [formGroup]="forgotPasswordForm" (ngSubmit)="forgotPassword()">
       <div class="logo">
         <img src="../../assets/logo.svg" />
       </div>
@@ -17,11 +17,11 @@
         <small>Confirm your email as we’ll send the URL</small>
       </ion-text>
       <div class="formWrap">
-        <ion-input class="inputField userIcon" placeholder="Enter email address" type="number"></ion-input>
+        <ion-input class="inputField userIcon" formControlName="contactNumber" placeholder="Enter mobile number" type="number"></ion-input>
       </div>
       
       <div class="formWrap">
-        <ion-button class="button-round btncolorprimary" expand="full" >Send</ion-button>
+        <ion-button type="submit" class="button-round btncolorprimary" expand="full" >Send</ion-button>
       </div>
     </form>
   </ion-grid>
