Added files for Adult , Child and Doctor Profile

--- a/mastishk/src/app/login/login.page.html
+++ b/mastishk/src/app/login/login.page.html
@@ -60,7 +60,7 @@
           </ion-button>
         </ion-col>
         <ion-col>          
-          <ion-button class="button-round btncolorprimary btnSocial btnFacebook" expand="block">
+          <ion-button class="button-round btncolorprimary btnSocial btnFacebook" (click)="goToDoctorProfile()" expand="block">
             <img src="../../assets/facebook.svg" /> Facebook
           </ion-button>
         </ion-col>
