Splash screen , app icon added to the folder

--- a/mastishk/src/app/doctor-profile/doctor-profile.page.html
+++ b/mastishk/src/app/doctor-profile/doctor-profile.page.html
@@ -70,7 +70,7 @@
     </ion-card-content>
   </ion-card>
   
-  <label class="cardLabel color-blue">
+  <!-- <label class="cardLabel color-blue">
     <img src="../../assets/home.svg" /><span>Place of Residence</span>
   </label>
   <ion-card class="card">  
@@ -152,7 +152,7 @@
         <ion-input class="inputField" placeholder="State" type="text" required></ion-input>
       </div>
     </ion-card-content>
-  </ion-card>
+  </ion-card> -->
   <div class="btmBtnWrap">
     <ion-button class="button-round btncolorprimary blueColor">Save</ion-button>
   </div>
