--- a/mastishk/src/app/login/login.page.html
+++ b/mastishk/src/app/login/login.page.html
@@ -55,7 +55,7 @@
 
       <ion-row>        
         <ion-col>
-          <ion-button class="button-round btncolorprimary btnSocial btnGoogle" (click)="goToUserProfile()" expand="block">
+          <ion-button class="button-round btncolorprimary btnSocial btnGoogle" expand="block">
             <img src="../../assets/google.svg" /> Google
           </ion-button>
         </ion-col>
